--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="background-pattern"></div>
     	<div class="container">
                 <div class="top-pic-body">
-                    <div class="top-pic animated flipInY " ><a href="#"><img src="images/person.png" alt="a-person" /></a></div>
+                    <div class="top-pic animated flipInY " ><a href="#"><img src="images/person.jpg" alt="a-person" /></a></div>
                     <div class="social-icon social-icon1 "><a href="https://www.facebook.com/jean.sanchezz" target="_blank"><i class="icon-facebook-circled-2 facebook"></i></a></div>
                     <div class="social-icon social-icon2 "><a href="https://twitter.com/isyutaro" target="_blank"><i class="icon-twitter-circled-2 twitter"></i></a></div>
                     <div class="social-icon social-icon3 "><a href="http://www.linkedin.com/profile/view?id=111617188" target="_blank"><i class="icon-linkedin-circled linkedin"></i><ga></div>
