actulizar trabajo titulo

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <hr />
                     <div class="row-fluid">
                         <div class="span4">
-                            <h2 class="h2-small">Curriculum</h2>
+                            <h2 class="h2-small">Trabajo</h2>
                                 <div class="resume-body ">
                                     <div class="resume-circle-body animation-fadeInUp">
                                         <div class="resume-circle">Ahora</div>
