--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" />
 		<link rel="stylesheet" type="text/css" href="css/animate-custom.css" />
-       
+                <link rel="shortcut icon" href="favicon.ico" />
 
 		
    
